--- a/Frontas/Pages/Index.cshtml
+++ b/Frontas/Pages/Index.cshtml
@@ -1,10 +1,32 @@
 ﻿@page
-@model IndexModel
+@model Frontas.Pages.IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Renginiai";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <h1 class="title">Renginiai</h1>
+    <div class="row">
+        <div class="col-md-8">
+            @foreach (var renginys in Model.Event)
+            {
+                <div class="event">
+                    <h2>@renginys.Title</h2>
+                    <p>@renginys.Description</p>
+                    <p>@renginys.StartDate</p>
+                    <p>@renginys.EndDate</p><!--.ToShortDateString()</p>-->
+                </div>
+            }
+        </div>
+        <div class="col-md-4">
+            <div class="sidebar">
+                <div class="user-info">
+                    <p>Vartotojo pavadinimas</p>
+                </div>
+                <div class="create-event">
+                    <button type="button" class="btn btn-primary">Kurti renginį</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
