--- a/Frontas/Pages/Shared/_Layout.cshtml
+++ b/Frontas/Pages/Shared/_Layout.cshtml
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="~/Frontas.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <!--cia krc navigation bar kurionenaudossim-->
    <!--<header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
@@ -31,17 +30,18 @@
             </div>
         </nav>
     </header>-->
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <!--<footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2024 - Frontas - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
-    </footer>
+    </footer>-->
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
