--- a/Frontas/wwwroot/css/site.css
+++ b/Frontas/wwwroot/css/site.css
@@ -32,14 +32,17 @@
 }
 
 .event {
-    border: 1px solid #ccc;
+    border: none;
     padding: 20px;
     margin-bottom: 20px;
     color: var(--text-color);
     border-radius: var(--default-radius);
+    transition: background-color 0.3s;
+    box-shadow: 0 3px 10px var(--text-color);
 }
 
-.event:hover {
+.event:hover, .user-info:hover, create-event:hover {
+    border: none;
     background-color: var(--accent-hover-color);
     color: var(--form-bg-color);
 }
@@ -48,22 +51,42 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border: 1px solid #ccc;
     padding: 20px;
     border-radius: 8px;
 }
 
+
 .user-info, .create-event {
+    border: none;
+    border: 1px solid #ccc;
+    padding: 15px;
     margin-bottom: 20px;
+    color: var(--text-color);
     text-align: center;
+    border-radius: var(--default-radius);
+    box-shadow: 0 3px 10px var(--text-color);
 }
 
 .btn {
     width: 100%;
 }
 
+.event-link, .user-info-link, .create-event-link {
+    border: none;
+    display: block;
+    text-decoration: none;
+    color: inherit;
+}
+
+
 .event-details {
-    border: 1px solid #ccc;
+    border: none;
+    padding: 20px;
+    margin-bottom: 20px;
+    color: var(--text-color);
+    border-radius: var(--default-radius);
+    transition: background-color 0.3s;
+    box-shadow: 0 3px 10px var(--text-color);
     padding: 20px;
     border-radius: 8px;
     margin-bottom: 40px;
@@ -76,14 +99,19 @@
     margin-bottom: 40px;
 }
 
-    .section h2 {
-        margin-bottom: 20px;
-    }
+.section h2 {
+    margin-bottom: 20px;
+}
 
 .grid {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
+}
+
+.btn-primary {
+    width: 100%;
+    text-align: center;
 }
 
 .item {
@@ -106,6 +134,6 @@
     cursor: pointer;
 }
 
-    .add-button:hover {
-        background-color: #0056b3;
-    }
+.add-button:hover {
+    background-color: #0056b3;
+}
