--- a/Frontas/Pages/Index.cshtml
+++ b/Frontas/Pages/Index.cshtml
@@ -14,8 +14,8 @@
                     <div class="event">
                         <h2>@renginys.Title</h2>
                         <p>@renginys.Description</p>
-                        <p>@renginys.StartDate.ToString("yyyy-MM-dd")</p>
-                        <p>@renginys.EndDate.ToString("yyyy-MM-dd")</p>
+                        <p>Pradžia: @renginys.StartDate.ToString("yyyy-MM-dd")</p>
+                        <p>Pabaiga: @renginys.EndDate.ToString("yyyy-MM-dd")</p>
                     </div>
                 </a>
             }
