--- a/Frontas/Pages/Index.cshtml
+++ b/Frontas/Pages/Index.cshtml
@@ -28,7 +28,7 @@
             </a>
             <div class="createEvent">
                 <h3>Kurti renginį</h3>
-                <form method="post" id="createEventForm">
+                <form method="post" id="createEventForm" style="display: none;">
                     <div class="form-group">
                         <label for="title">Pavadinimas</label>
                         <input type="text" id="title" name="Title" class="form-control" required />
