--- a/Frontas/wwwroot/css/site.css
+++ b/Frontas/wwwroot/css/site.css
@@ -31,13 +31,19 @@
     justify-content: space-between;
 }
 
-.addToEvent {
+
+.addToEvent, .addEmployee, .addToParticipant, .createEvent, .addToEventTask, .addToEventParticipant, .addToEventEmployee {
+    cursor: pointer;
     border: none;
     padding: 20px;
     margin-bottom: 20px;
     color: var(--text-color);
     border-radius: var(--default-radius);
     box-shadow: 0 3px 10px var(--text-color);
+    margin-top: 10px;
+    border: 1px solid #ddd;
+    padding: 10px;
+    background-color: #fafafa;
 }
 
 .event {
@@ -48,7 +54,6 @@
     border-radius: var(--default-radius);
     box-shadow: 0 3px 10px var(--text-color);
 }
-
 
 .dropdown-container {
     display: flex;
@@ -85,19 +90,11 @@ button {
     box-shadow: 0 3px 10px var(--text-color);
 }
 
-    .event:hover, .user-info:hover, create-event:hover, event-details:hover, button:hover, .event-details:hover {
+    .event:hover, .user-info:hover, .create-event:hover, .event-details:hover, button:hover, .event-details:hover {
         background-color: var(--accent-hover-color);
         color: var(--form-bg-color);
     }
 
-.createEvent {
-    border: none;
-    padding: 20px;
-    margin-bottom: 20px;
-    color: var(--text-color);
-    border-radius: var(--default-radius);
-    box-shadow: 0 3px 10px var(--text-color);
-}
 
 .sidebar {
     display: flex;
@@ -106,7 +103,6 @@ button {
     padding: 20px;
     border-radius: 8px;
 }
-
 
 .user-info, .create-event {
     border: none;
@@ -129,7 +125,6 @@ button {
     color: inherit;
 }
 
-
 .event-details {
     border: none;
     padding: 20px;
@@ -150,9 +145,9 @@ button {
     margin-bottom: 40px;
 }
 
-.section h2 {
-    margin-bottom: 20px;
-}
+    .section h2 {
+        margin-bottom: 20px;
+    }
 
 .grid {
     display: flex;
@@ -185,6 +180,6 @@ button {
     cursor: pointer;
 }
 
-.add-button:hover {
-    background-color: #0056b3;
-}
+    .add-button:hover {
+        background-color: #0056b3;
+    }
