--- a/Frontas/Pages/Index.cshtml
+++ b/Frontas/Pages/Index.cshtml
@@ -8,7 +8,7 @@
     <h1 class="title">Renginiai</h1>
     <div class="row">
         <div class="col-md-8">
-            @foreach (var renginys in Model.Event)
+            @foreach (var renginys in Model.EventResponse)
             {
                 <a href="/EventPage?id=@renginys.Id" class="event-link">
                     <div class="event">
