--- a/Frontas/Pages/EventPage.cshtml
+++ b/Frontas/Pages/EventPage.cshtml
@@ -128,32 +128,48 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-8">
-
-            </div>
-            <div class="col-md-4">
-                <div class="addToEventTask">
-                    <h3>Kurti užduotį</h3>
-                    <form method="post" id="createEventFormTask" style="display: none;">
-                        <div class="form-group">
-                            <label for="title">Pavadinimas</label>
-                            <input type="text" id="title" name="Title" class="form-control" required />
-                        </div>
-                        <div class="form-group">
-                            <label for="description">Aprašymas</label>
-                            <textarea id="description" name="Description" class="form-control"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <label for="startDate">Pradžios data</label>
-                            <input type="date" id="startDate" name="StartDate" class="form-control" required />
-                        </div>
-                        <div class="form-group">
-                            <label for="endDate">Pabaigos data</label>
-                            <input type="date" id="endDate" name="EndDate" class="form-control" required />
-                        </div>
-                        <button type="submit" class="btn btn-primary">Kurti</button>
-                    </form>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="row">
+                        @foreach (var uzduotis in Model.TaskResponse)
+                        {
+                            <div class="col-md-3">
+                                <a href="/EventTaskPage?id=@uzduotis.Id" class="event-link">
+                                    <div class="task">
+                                        <h4>@uzduotis.Title</h4>
+                                        <p>@uzduotis.Description</p>
+                                        <p>Data: @(uzduotis.ScheduledTime?.ToString("yyyy-MM-dd") ?? "Not Scheduled")</p>
+                                        <p>Atsakingas darbuotojas: <i>Placeholder darbuotojas</i></p>
+                                    </div>
+                                </a>
+                            </div>
+                        }
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="addToEventTask">
+                        <h3>Kurti užduotį</h3>
+                        <form method="post" id="createEventFormTask" style="display: none;">
+                            <div class="form-group">
+                                <label for="title">Pavadinimas</label>
+                                <input type="text" id="title" name="Title" class="form-control" required />
+                            </div>
+                            <div class="form-group">
+                                <label for="description">Aprašymas</label>
+                                <textarea id="description" name="Description" class="form-control"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="startDate">Pradžios data</label>
+                                <input type="date" id="startDate" name="StartDate" class="form-control" required />
+                            </div>
+                            <div class="form-group">
+                                <label for="endDate">Pabaigos data</label>
+                                <input type="date" id="endDate" name="EndDate" class="form-control" required />
+                            </div>
+                            <button type="submit" class="btn btn-primary">Kurti</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
