pusiau veikia participants

--- a/Frontas/wwwroot/css/site.css
+++ b/Frontas/wwwroot/css/site.css
@@ -184,6 +184,20 @@ button {
         background-color: #0056b3;
     }
 
+.participant {
+    cursor: pointer;
+    border: none;
+    padding: 20px;
+    margin-bottom: 20px;
+    color: var(--text-color);
+    border-radius: var(--default-radius);
+    box-shadow: 0 3px 10px var(--text-color);
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #fafafa;
+    height: 100px;
+    overflow: hidden;
+}
 
 .task {
     cursor: pointer;
@@ -194,7 +208,6 @@ button {
     border-radius: var(--default-radius);
     box-shadow: 0 3px 10px var(--text-color);
     margin-top: 10px;
-    border: 1px solid #ddd;
     padding: 10px;
     background-color: #fafafa;
     height: 100px;
