ModTaskPage exists now (post/delete no work)

--- a/Frontas/Pages/EventTaskPage.cshtml
+++ b/Frontas/Pages/EventTaskPage.cshtml
@@ -4,6 +4,13 @@
     ViewData["Title"] = "Uzduotis";
 }
 
-<div class="col-md-8">
+<a href="javascript:void(0);" onclick="window.history.back();" class="user-info-link"><h3>Grįžti prie renginio</h3></a>
 
-</div>
+<a href="/ModTaskPageModel?id=@(Model.TaskResponse?.Id ?? null)" class="user-info-link">
+    <div class="event-details">
+        <h1>@(Model.TaskResponse?.Title ?? "Unknown Task")</h1>
+        <p>Užduoties aprašymas: @(Model.TaskResponse?.Description ?? "No description provided")</p>
+        <p>Atlikti iki: @(Model.TaskResponse?.ScheduledTime?.ToString("yyyy-MM-dd") ?? "Not Scheduled")</p>
+        <p>Atsakingas darbuotojas: <i>Placeholder darbuotojas</i></p>
+    </div>
+</a>
